// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SongPreview /> renders correctly with custom Song 1`] = `
<Container
  onPress={[Function]}
>
  <AlbumCover
    source={
      Object {
        "uri": "https://is3-ssl.mzstatic.com/image/thumb/Music125/v4/8d/58/a9/8d58a928-0663-71f7-4e5c-d2bd54a124fb/source/100x100bb.jpg",
      }
    }
  />
  <FlexCol>
    <TrackName>
      Come As You Are
    </TrackName>
    <Title>
      Nirvana · Alternative
    </Title>
    <SubTitle>
      Released on 24/9/1991 · Length 3:39
    </SubTitle>
    <FlexRow>
      <ExtraInfoContainer>
        <ExtraInfoText>
          $1.29
        </ExtraInfoText>
      </ExtraInfoContainer>
    </FlexRow>
  </FlexCol>
</Container>
`;

exports[`<SongPreview /> renders correctly with default props 1`] = `
<Container
  onPress={[Function]}
>
  <AlbumCover
    source={
      Object {
        "uri": "https://is4-ssl.mzstatic.com/image/thumb/Music114/v4/e4/f9/59/e4f959ff-e758-ff29-4b26-39ae222489c8/source/100x100bb.jpg",
      }
    }
  />
  <FlexCol>
    <TrackName>
      Nirvana
    </TrackName>
    <Title>
      Sam Smith · Pop
    </Title>
    <SubTitle>
      Released on 1/1/2013 · Length 3:17
    </SubTitle>
    <FlexRow>
      <ExtraInfoContainer>
        <ExtraInfoText>
          $0.69
        </ExtraInfoText>
      </ExtraInfoContainer>
    </FlexRow>
  </FlexCol>
</Container>
`;
